--- a/packages.html
+++ b/packages.html
@@ -19,8 +19,8 @@
       </a>
     </div>
     <div name="taxi2">
-      <a href="git+https://git@github.com/iTaxoTools/TaxI2.git@main#egg=taxi2-2.1.dev1">
-          taxi2-2.1.dev1
+      <a href="git+https://git@github.com/iTaxoTools/TaxI2.git@v2.1.1#egg=taxi2-2.1.1">
+          taxi2-2.1.1
       </a>
     </div>
 </html>
