Fix itt-common version in packages.html

--- a/packages.html
+++ b/packages.html
@@ -4,8 +4,8 @@
       <a href="git+https://git@github.com/iTaxoTools/itt-common.git@v0.2.4#egg=itaxotools-common-0.2.4">
         itaxotools-common-0.2.4
       </a>
-      <a href="git+https://git@github.com/iTaxoTools/itt-common.git@main#egg=itaxotools-common-0.3.dev0">
-        itaxotools-common-0.3.dev0
+      <a href="git+https://git@github.com/iTaxoTools/itt-common.git@v0.3.0#egg=itaxotools-common-0.3.0">
+        itaxotools-common-0.3.0
       </a>
     </div>
     <div name="DNAconvert">
